--- a/run-buddy.html
+++ b/run-buddy.html
@@ -159,6 +159,30 @@
      <!-- "reach out" section -->
      <section>
          <h2>Reach Out</h2>
+         <div class="contact-info">
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.410556429252!2d-118.4325915075789!3d34.18698513749753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c296f8dff859b1%3A0x9763bc6384c99029!2s13735%20Victory%20Blvd%2C%20Van%20Nuys%2C%20CA%2091401!5e0!3m2!1sen!2sus!4v1635275885493!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+           width="400"
+           height="400"
+           style="border: 0;"
+           allowfullscreen=""
+           loading="lazy">
+          </iframe>
+          <div>
+            <h3>Run Buddy</h3>
+            <p>
+              Any questions or concerns before signing up?
+              <br />
+              Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+              55 Main Street <br/>
+              Some Town, Ca <br/>
+              12345 <br />
+              P: 555.RUN.BUDZ (555.786.2839)<br />
+              E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+            </address>
+          </div>
+         </div>
     </section>
 
     <!-- footer -->
