--- a/run-buddy.html
+++ b/run-buddy.html
@@ -8,16 +8,13 @@
     <title>Run Buddy</title>
 </head>
 <body>
-<!-- navigation --> 
     <header>
         <h1>
           <a href="/">RUN BUDDY</a>
         </h1>
-        <nav><!-- Unordered list element -->
+        <nav>
             <ul>
-              <!-- List item element-->
               <li>
-                <!-- Anchor element -->
                 <a href="#what-we-do">What We Do</a>
               </li>
               <li>
@@ -38,7 +35,6 @@
       <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>Fill out this form and one of our trainers will schedule a consult</p>
-        <!-- Add form element -->
         <form>
           <ul>
           <label for="name">Enter full name:</label>
@@ -88,7 +84,6 @@
         <h2 class="section-title secondary-border">What you Do</h2>
 
         <div>
-          <!-- insert this image element -->
           <img src="./assets/images/step-1.svg" alt="" />
           <h3>Step 1: Fill Out the Form Above.</h3>
           <p>You're already here, so why not?</p>
@@ -189,7 +184,7 @@
     <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
         <div>
-          <a href="#">Read Our Privacy Policy</a><br />
+          <a href="./Privacy-policy.html">Read Our Privacy Policy</a><br />
           &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
