--- a/run-buddy.html
+++ b/run-buddy.html
@@ -184,7 +184,19 @@
             E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
           </address>
         </div>
-        </section>
+        <div class="contact-form">
+          <h3>Contact US</h3>
+          <form>
+            <label for="contact-name">Your Name</label>
+            <input type="text" id="contact-name" placeholder="Your Name" />
+
+            <label for="contact-message">Message</label>
+            <textarea id="contact-message" placeholder="message"></textarea>
+
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+      </section>
 
     <!-- footer -->
     <footer>
