--- a/run-buddy.html
+++ b/run-buddy.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Run Buddy</title>
   </head>
@@ -245,6 +246,3 @@
     <!-- footer end -->
   </body>
 </html>
-
-
-2.3.3
